# seda-example-ops

./: .env.example  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  biome.jsonc  package.json
.cargo/: config.toml
.github/workflows/: pr.yml
examples/blocksize-bidask/: Cargo.toml  README.md
examples/blocksize-bidask/src/: execution_phase.rs  main.rs  tally_phase.rs
examples/blocksize-vwap/: Cargo.toml  README.md
examples/blocksize-vwap/src/: execution_phase.rs  tally_phase.rs
examples/caplight-eod-market-price/: Cargo.toml  README.md
examples/caplight-eod-market-price/src/: execution_phase.rs  main.rs  marketData.json  tally_phase.rs
examples/equity-or-commodity-price/: Cargo.toml  README.md
examples/equity-or-commodity-price/src/: execution_phase.rs  fx.json  uslf_q.json  uslf_t.json
examples/evm-price-feed/: Cargo.toml  README.md
examples/evm-price-feed/src/: execution_phase.rs  main.rs  tally_phase.rs
examples/evm-price-feed/src/feeds/: binance.rs  mod.rs
examples/generic-dxfeed/: Cargo.toml  README.md
examples/generic-dxfeed/src/: commodity.json  execution_phase.rs  fx_r.json  main.rs  tally_phase.rs
examples/jup-price-feed/: Cargo.toml  README.md
examples/jup-price-feed/src/: execution_phase.rs  tally_phase.rs
examples/kalshi-multi-market-feed/: Cargo.toml  README.md
examples/kalshi-multi-market-feed/src/: execution_phase.rs  tally_phase.rs
examples/kalshi-polymarket-vwap/: Cargo.toml  README.md
examples/kalshi-polymarket-vwap/src/: execution_phase.rs  tally_phase.rs
examples/kalshi-simple-feed/: Cargo.toml  README.md
examples/kalshi-simple-feed/src/: execution_phase.rs  tally_phase.rs
examples/multi-price-feed/: Cargo.toml  README.md
examples/multi-price-feed/src/: execution_phase.rs  main.rs  tally_phase.rs
examples/multi-price-feed/src/feeds/: binance.rs  gateapi.rs  kucoin.rs  mexc.rs  mod.rs  okx.rs
examples/single-commodity-price/: Cargo.toml  README.md
examples/single-commodity-price/src/: execution_phase.rs  main.rs  tally_phase.rs
examples/single-equity-price/: Cargo.toml  README.md
examples/single-equity-price-verification/: Cargo.toml  README.md
examples/single-equity-price-verification/src/: execution_phase.rs  main.rs  tally_phase.rs
examples/single-equity-price/src/: equity.json  execution_phase.rs  main.rs  tally_phase.rs
examples/single-price-feed/: Cargo.toml  README.md
examples/single-price-feed-verification/: Cargo.toml  README.md
examples/single-price-feed-verification/src/: execution_phase.rs  tally_phase.rs
examples/single-price-feed/src/: execution_phase.rs  tally_phase.rs
examples/single-price-feed/tests/: index.test.ts
examples/tests/: blocksize-bidask.test.ts  blocksize-vwap.test.ts  caplight-eod-market-price.test.ts  equity-or-commodity-price.test.ts  evm-price-feed.test.ts  generic-dxfeed.test.ts  multi-price-feed.test.ts  single-commodity-price.test.ts  single-equity-price-verification.test.ts  single-equity-price.test.ts  single-price-feed-verification.test.ts  single-price-feed.test.ts  us-rates.test.ts  utils.test.ts  utils.ts
examples/us-rates/: Cargo.toml  README.md
examples/us-rates/src/: execution_phase.rs  main.rs  tally_phase.rs
scripts/: decode-abi.ts  post-dr.ts
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/new_op/: mod.rs
