[workspace]
resolver = "2"
default-members = ["xtask"]
members = [
	"examples/caplight-eod-market-price",
	"examples/single-commodity-price",
	"examples/single-equity-price",
	"examples/multi-price-feed",
	"examples/single-price-feed",
	"xtask",
]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
