[workspace]
resolver = "2"
default-members = ["xtask"]
members = [
	"examples/caplight-eod-market-price",
	"examples/single-commodity-price",
	"examples/single-equity-price",
	"examples/single-equity-price-verification",
	"examples/multi-price-feed",
	"examples/single-price-feed",
	"examples/single-price-feed-verification",
	"examples/evm-price-feed",
	"examples/us-rates",
	"xtask",
]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
