[workspace]
resolver = "2"
default-members = ["xtask"]
members = [
	"examples/blocksize-bidask",
	"examples/jup-price-feed",
	"examples/blocksize-vwap",
	"examples/caplight-eod-market-price",
	"examples/evm-price-feed",
	"examples/generic-dxfeed",
	"examples/multi-price-feed",
	"examples/single-commodity-price",
	"examples/single-equity-price",
	"examples/single-equity-price-verification",
	"examples/single-price-feed",
	"examples/single-price-feed-verification",
	"examples/us-rates",
	"xtask",
]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
