[package]
name = "blocksize-vwap"
version = "0.1.0"
edition = "2024"
# rust-version = ""

[features]
default = ["env-testnet"]
seda-hide = []
env-testnet = ["testnet", "seda-hide"]
env-mainnet = ["mainnet", "seda-hide"]
test = ["testnet"]

testnet = []
mainnet = []

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
seda-sdk-rs = { version = "1.1", default-features = false }
ethabi = "18.0"
