[package]
name = "single-equity-price-verification"
version = "0.1.0"
edition = "2024"
# rust-version = ""

[features]
default = ["env-testnet"]
seda-hide = ["seda-sdk-rs/hide-panic-paths"]
env-testnet = ["testnet", "seda-hide"]
env-mainnet = ["mainnet", "seda-hide"]
test = ["testnet"]

testnet = []
mainnet = []

[dependencies]
anyhow = "1.0"
ethabi = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
seda-sdk-rs = { version = "1.1", default-features = false }
